fixed overflow

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -701,6 +701,7 @@
         line-height: 18px;
         resize: vertical;
         position: relative;
+        overflow: hidden;
     }
     
     .bb__result {
